public/analytics-pro/v0.9.0rc5/_sources/reference/tmlt/analytics/metrics/_user_defined/index.rst.txt
:orphan:

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


********************
_user_defined
********************

.. py:module:: tmlt.analytics.metrics._user_defined

.. autoapi-nested-parse::

   Metric functions for wrapping user-defined functions.











Classes
=======

.. list-table::

   * - :class:`.CustomSingleBaselineMetric`
     - Wrapper to turn a function into a metric using DP and single baseline's output.
   * - :class:`.CustomMultiBaselineMetric`
     - Wrapper to turn a function into a metric using DP and single baseline's output.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: CustomSingleBaselineMetric(output, func, *, name, description, baselines = None)

   Bases: :class:`tmlt.analytics.metrics._base.SingleBaselineMetric`

   Wrapper to turn a function into a metric using DP and single baseline's output.

   .. note::

       |PRO_NOTE|


   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import CustomSingleBaselineMetric
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> baseline_outputs = {"O": baseline_df}

   >>> metric = CustomSingleBaselineMetric(
   ...     output="O",
   ...     func=lambda dp, baseline: 0.0,
   ...     name="Custom Metric",
   ...     description="Custom Description",
   ... )
   >>> result = metric.compute_for_baseline(dp_outputs, baseline_outputs)
   >>> result
   0.0
   >>> metric.format(result)
   '0.0'






   .. automethod:: __init__
   .. py:method:: output()
      :property:

      Returns the name of the run output.


   .. py:method:: func()
      :property:

      Returns function to be applied.


   .. py:method:: format(value)

      Converts value to human-readable format.


   .. py:method:: check_compatibility_with_program(program)

      Checks if the metric is compatible with the program.


   .. py:method:: compute_for_baseline(dp_outputs, baseline_outputs)

      Returns the metric value given the DP outputs and the baseline outputs.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: CustomMultiBaselineMetric(output, func, *, name, description, baselines = None)

   Bases: :class:`tmlt.analytics.metrics._base.MultiBaselineMetric`

   Wrapper to turn a function into a metric using DP and single baseline's output.

   .. note::

       |PRO_NOTE|


   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.analytics.metrics import AbsoluteError
       >>> from tmlt.analytics.metrics import CustomMultiBaselineMetric
       >>> spark = SparkSession.builder.getOrCreate()

   >>> dp_df = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> dp_outputs = {"O": dp_df}
   >>> baseline_df1 = spark.createDataFrame(pd.DataFrame({"A": [5]}))
   >>> baseline_df2 = spark.createDataFrame(pd.DataFrame({"A": [6]}))
   >>> baseline_outputs = {
   ...    "O": {"baseline1": baseline_df1, "baseline2": baseline_df2}
   ... }
   >>> _func = lambda dp_outputs, baseline_outputs: {
   ...    output_key: {
   ...         baseline_key: AbsoluteError(output_key).compute_on_scalar(
   ...                 dp_output.first().A, baseline_output.first().A
   ...         )
   ...         for baseline_key, baseline_output
   ...         in baseline_outputs[output_key].items()
   ...     }
   ...     for output_key, dp_output in dp_outputs.items()
   ...  }

   >>> metric = CustomMultiBaselineMetric(
   ...     output="O",
   ...     func=_func,
   ...     name="Custom Metric",
   ...     description="Custom Description",
   ... )
   >>> result = metric.compute_for_multiple_baselines(dp_outputs, baseline_outputs)
   >>> result
   {'O': {'baseline1': 0, 'baseline2': 1}}






   .. automethod:: __init__
   .. py:method:: output()
      :property:

      Returns the name of the run output.


   .. py:method:: func()
      :property:

      Returns function to be applied.


   .. py:method:: format(value)

      Converts value to human-readable format.


   .. py:method:: check_compatibility_with_program(program)

      Checks if the metric is compatible with the program.


   .. py:method:: compute_for_multiple_baselines(dp_outputs, baseline_outputs)

      Returns the metric value given the DP and multiple baseline outputs.


   .. py:method:: compute(dp_outputs, baseline_outputs)

      Computes the given metric on the given DP and baseline outputs.

      The baseline_outputs will already be filtered to only include the baselines that
      the metric is supposed to use.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs, after filtering to
                               only include the baselines that the metric is supposed to use.


   .. py:method:: name()
      :property:

      Returns the name of the metric.


   .. py:method:: description()
      :property:

      Returns the description of the metric.


   .. py:method:: baselines()
      :property:

      Returns the baselines used for the metric.


   .. py:method:: __call__(dp_outputs, baseline_outputs)

      Computes the given metric on the given DP and baseline outputs.

      :param dp_outputs: The differentially private outputs of the program.
      :param baseline_outputs: The outputs of the baseline programs.







